fix visible size

--- a/css/image-dex.css
+++ b/css/image-dex.css
@@ -11,7 +11,8 @@ html {
 
 body {
 	font-size: 1.6rem;
-} 
+	width: 90vh;
+}
 
 div#imgdex {
 	position: relative;
